Agregado gridsearch para xgboost a parameter_tuning

--- a/feature_generation.ipynb
+++ b/feature_generation.ipynb
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4148,19 +4148,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "dicc_class = {}\n",
     "dicc_class_types = {}\n",
     "\n",
-    "train,test = pre_processing.load_featured_datasets()"
+    "train,test = pre_processing.load_featured_datasets(class_feature=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4170,7 +4170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4180,7 +4180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4189,7 +4189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4198,7 +4198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4207,7 +4207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4216,7 +4216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4246,7 +4246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4258,7 +4258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -4266,18 +4266,18 @@
      "output_type": "stream",
      "text": [
       "Training until validation scores don't improve for 50 rounds\n",
-      "[100]\ttraining's auc: 0.936681\tvalid_0's auc: 0.936713\n",
-      "[200]\ttraining's auc: 0.94586\tvalid_0's auc: 0.945518\n",
-      "[300]\ttraining's auc: 0.949429\tvalid_0's auc: 0.948907\n",
-      "[400]\ttraining's auc: 0.951536\tvalid_0's auc: 0.950942\n",
-      "[500]\ttraining's auc: 0.952963\tvalid_0's auc: 0.952247\n",
-      "[600]\ttraining's auc: 0.954361\tvalid_0's auc: 0.953545\n",
-      "[700]\ttraining's auc: 0.955378\tvalid_0's auc: 0.954567\n",
-      "[800]\ttraining's auc: 0.956229\tvalid_0's auc: 0.95535\n",
-      "[900]\ttraining's auc: 0.956926\tvalid_0's auc: 0.956035\n",
-      "[1000]\ttraining's auc: 0.957506\tvalid_0's auc: 0.956572\n",
+      "[100]\ttraining's auc: 0.937828\tvalid_0's auc: 0.938108\n",
+      "[200]\ttraining's auc: 0.946745\tvalid_0's auc: 0.946473\n",
+      "[300]\ttraining's auc: 0.949959\tvalid_0's auc: 0.9495\n",
+      "[400]\ttraining's auc: 0.95154\tvalid_0's auc: 0.951021\n",
+      "[500]\ttraining's auc: 0.952976\tvalid_0's auc: 0.952353\n",
+      "[600]\ttraining's auc: 0.95432\tvalid_0's auc: 0.95358\n",
+      "[700]\ttraining's auc: 0.955302\tvalid_0's auc: 0.954505\n",
+      "[800]\ttraining's auc: 0.956031\tvalid_0's auc: 0.955213\n",
+      "[900]\ttraining's auc: 0.956761\tvalid_0's auc: 0.955903\n",
+      "[1000]\ttraining's auc: 0.957333\tvalid_0's auc: 0.956404\n",
       "Did not meet early stopping. Best iteration is:\n",
-      "[1000]\ttraining's auc: 0.957506\tvalid_0's auc: 0.956572\n"
+      "[1000]\ttraining's auc: 0.957333\tvalid_0's auc: 0.956404\n"
      ]
     }
    ],
@@ -4290,7 +4290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4303,7 +4303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4312,7 +4312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4321,7 +4321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4333,7 +4333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -4343,18 +4343,18 @@
      "output_type": "stream",
      "text": [
       "Training until validation scores don't improve for 50 rounds\n",
-      "[100]\ttraining's auc: 0.937728\tvalid_0's auc: 0.937861\n",
-      "[200]\ttraining's auc: 0.945384\tvalid_0's auc: 0.945851\n",
-      "[300]\ttraining's auc: 0.948419\tvalid_0's auc: 0.948585\n",
-      "[400]\ttraining's auc: 0.950685\tvalid_0's auc: 0.950677\n",
-      "[500]\ttraining's auc: 0.952108\tvalid_0's auc: 0.951715\n",
-      "[600]\ttraining's auc: 0.952961\tvalid_0's auc: 0.952445\n",
-      "[700]\ttraining's auc: 0.953958\tvalid_0's auc: 0.95315\n",
-      "[800]\ttraining's auc: 0.95457\tvalid_0's auc: 0.953629\n",
-      "[900]\ttraining's auc: 0.955154\tvalid_0's auc: 0.954053\n",
-      "[1000]\ttraining's auc: 0.955572\tvalid_0's auc: 0.954357\n",
+      "[100]\ttraining's auc: 0.939279\tvalid_0's auc: 0.93982\n",
+      "[200]\ttraining's auc: 0.944915\tvalid_0's auc: 0.945439\n",
+      "[300]\ttraining's auc: 0.94851\tvalid_0's auc: 0.948893\n",
+      "[400]\ttraining's auc: 0.950439\tvalid_0's auc: 0.95063\n",
+      "[500]\ttraining's auc: 0.951725\tvalid_0's auc: 0.951664\n",
+      "[600]\ttraining's auc: 0.952742\tvalid_0's auc: 0.952573\n",
+      "[700]\ttraining's auc: 0.953844\tvalid_0's auc: 0.953406\n",
+      "[800]\ttraining's auc: 0.954373\tvalid_0's auc: 0.953827\n",
+      "[900]\ttraining's auc: 0.954889\tvalid_0's auc: 0.954153\n",
+      "[1000]\ttraining's auc: 0.955447\tvalid_0's auc: 0.954529\n",
       "Did not meet early stopping. Best iteration is:\n",
-      "[996]\ttraining's auc: 0.955574\tvalid_0's auc: 0.954342\n"
+      "[996]\ttraining's auc: 0.955454\tvalid_0's auc: 0.954555\n"
      ]
     }
    ],
@@ -4367,7 +4367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4387,7 +4387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -4396,7 +4396,7 @@
        "\"\\ntrain = train[['precio_alto', 'precio_alto_predicted', 'precio_alto_final',\\n               'precio_bajo', 'precio_bajo_predicted', 'precio_bajo_final',]]\\n\""
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4410,17 +4410,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Precios altos | Mejor precision: 92.34% con m = 0.85.\n",
-      "CPU times: user 8.47 s, sys: 202 µs, total: 8.47 s\n",
-      "Wall time: 8.47 s\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'%%time\\nn = 0.50\\nposibles = train.shape[0]\\nmejor_precision = 0\\n\\nfor i in range(50):\\n    \\n    add = i/100\\n    train[\\'precio_alto_final\\'] = train[\\'precio_alto_predicted\\'].map(lambda x: 1 if (x>(n+add)) else 0)\\n    favorables = train.loc[(train[\\'precio_alto\\'] == train[\\'precio_alto_final\\'])].shape[0]\\n    precision = favorables/posibles\\n    \\n    if precision > mejor_precision:\\n        mejor_precision = precision\\n        mejor_m = n+add\\n\\nprint(f\"Precios altos | Mejor precision: {round((mejor_precision*100), 2)}% con m = {mejor_m}.\")'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -4445,17 +4446,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Precios bajos | Mejor precision: 97.58% con m = 0.98.\n",
-      "CPU times: user 8.2 s, sys: 4.19 ms, total: 8.21 s\n",
-      "Wall time: 8.21 s\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'%%time\\nn = 0.01\\nposibles = train.shape[0]\\nmejor_precision = 0\\n\\nfor i in range(50):\\n    \\n    add = i/100\\n    train[\\'precio_bajo_final\\'] = train[\\'precio_bajo_predicted\\'].map(lambda x: 1 if (x>(n+add)) else 0)\\n    favorables = train.loc[(train[\\'precio_bajo\\'] == train[\\'precio_bajo_final\\'])].shape[0]\\n    precision = favorables/posibles\\n    \\n    if precision > mejor_precision:\\n        mejor_precision = precision\\n        mejor_m = n+add\\n\\nprint(f\"Precios bajos | Mejor precision: {round((mejor_precision*100), 2)}% con m = {mejor_m}.\")'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -4480,17 +4482,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mejor precision: 89.93% con m = (0.85, 0.98).\n",
-      "CPU times: user 3min 19s, sys: 10.5 ms, total: 3min 19s\n",
-      "Wall time: 3min 19s\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'%%time\\nn = 0.5\\nposibles = train.shape[0]\\nmejor_precision = 0\\n\\nfor i in range(50):\\n    add_a = i/100\\n    train[\\'precio_alto_final\\'] = train[\\'precio_alto_predicted\\'].map(lambda x: 1 if (x>(n+add_a)) else 0)\\n    \\n    for j in range(50):\\n        add_b = j/100\\n        train[\\'precio_bajo_final\\'] = train[\\'precio_bajo_predicted\\'].map(lambda x: 1 if (x>(n+add_b)) else 0)\\n        \\n        \\n        favorables = train.loc[((train[\\'precio_bajo\\'] == train[\\'precio_bajo_final\\']) & (train[\\'precio_alto\\'] == train[\\'precio_alto_final\\']))].shape[0]\\n        precision = favorables/posibles\\n\\n        if precision > mejor_precision:\\n            mejor_precision = precision\\n            mejor_m = (n+add_a, n+add_b)\\n\\nprint(f\"Mejor precision: {round((mejor_precision*100), 2)}% con m = {mejor_m}.\")'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -4527,9 +4530,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"train['precio_alto_final'] = train['precio_alto_predicted'].map(lambda x: 1 if (x>0.85) else 0)\\ntrain['precio_bajo_final'] = train['precio_bajo_predicted'].map(lambda x: 1 if (x>0.98) else 0)\""
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"train['precio_alto_final'] = train['precio_alto_predicted'].map(lambda x: 1 if (x>0.85) else 0)\n",
     "train['precio_bajo_final'] = train['precio_bajo_predicted'].map(lambda x: 1 if (x>0.98) else 0)\"\"\""
@@ -4537,17 +4551,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Para precios altos, la precision es de 92%.\n",
-      "Para precios bajos, la precision es de 97%.\n",
-      "Para usar ambos, la precision es de 89%.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'posibles = train.shape[0]\\n\\nfavorables = train.loc[(train[\\'precio_alto\\'] == train[\\'precio_alto_final\\'])].shape[0]\\nprint(f\"Para precios altos, la precision es de {int((favorables/posibles)*100)}%.\")\\nfavorables = train.loc[(train[\\'precio_bajo\\'] == train[\\'precio_bajo_final\\'])].shape[0]\\nprint(f\"Para precios bajos, la precision es de {int((favorables/posibles)*100)}%.\")\\nfavorables = train.loc[((train[\\'precio_bajo\\'] == train[\\'precio_bajo_final\\']) & (train[\\'precio_alto\\'] == train[\\'precio_alto_final\\']))].shape[0]\\nprint(f\"Para usar ambos, la precision es de {int((favorables/posibles)*100)}%.\")'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -4571,7 +4586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -4580,13 +4595,14 @@
        "Index(['antiguedad', 'habitaciones', 'garages', 'banos', 'metroscubiertos',\n",
        "       'metrostotales', 'idzona', 'lat', 'lng', 'gimnasio',\n",
        "       ...\n",
-       "       'idzona_meanencoding_m0', 'idzona_meanencoding_m1',\n",
-       "       'idzona_meanencoding_m4', 'precio_bajo', 'precio_alto', 'apto_chicos',\n",
-       "       'full', 'precio', 'precio_alto_predicted', 'precio_bajo_predicted'],\n",
-       "      dtype='object', length=148)"
+       "       'usd_subio', 'volcan_cerca', 'idzona_meanencoding_m0',\n",
+       "       'idzona_meanencoding_m1', 'idzona_meanencoding_m4', 'precio',\n",
+       "       'precio_alto', 'precio_bajo', 'precio_alto_predicted',\n",
+       "       'precio_bajo_predicted'],\n",
+       "      dtype='object', length=146)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4597,7 +4613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4607,7 +4623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4617,7 +4633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4627,7 +4643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4636,7 +4652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4648,7 +4664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4658,7 +4674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4668,7 +4684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4685,7 +4701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4698,7 +4714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4707,7 +4723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -4721,7 +4737,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4732,7 +4748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4741,7 +4757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -4750,7 +4766,7 @@
        "4411"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4761,7 +4777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4771,7 +4787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4783,7 +4799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4793,7 +4809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4803,7 +4819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
