--- a/main.ipynb
+++ b/main.ipynb
@@ -175,9 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_selected = feature_selection.get_selected_dataframe(train)\n",
@@ -1493,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,9 +1501,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pre_processing' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-11d8bb5832fe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpre_processing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_featured_datasets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'pre_processing' is not defined"
+     ]
+    }
+   ],
    "source": [
     "train,test = pre_processing.load_featured_datasets()"
    ]
@@ -1561,6 +1571,27 @@
     "    'subsample':[0.5,0.8,0.9,0.7],\n",
     "    'min_child_weight':[5,10,15,20,30]\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'xgboost' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-d1cae8bd34c8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mreg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxgboost\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mXGBRegressor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'xgboost' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "reg = xgboost.XGBRegressor()"
    ]
   },
   {
@@ -1636,13 +1667,7 @@
       "[20:21:00] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 1190 extra nodes, 0 pruned nodes, max_depth=12\n",
       "[20:21:01] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 1448 extra nodes, 0 pruned nodes, max_depth=12\n",
       "[20:21:03] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 1354 extra nodes, 0 pruned nodes, max_depth=12\n",
-      "[20:21:04] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 1220 extra nodes, 0 pruned nodes, max_depth=12\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[20:21:04] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 1220 extra nodes, 0 pruned nodes, max_depth=12\n",
       "[20:21:06] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 1252 extra nodes, 0 pruned nodes, max_depth=12\n",
       "[20:21:07] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 1182 extra nodes, 0 pruned nodes, max_depth=12\n",
       "[20:21:09] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 812 extra nodes, 0 pruned nodes, max_depth=12\n",
@@ -1705,13 +1730,7 @@
       "[20:22:34] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 590 extra nodes, 0 pruned nodes, max_depth=12\n",
       "[20:22:35] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 342 extra nodes, 0 pruned nodes, max_depth=12\n",
       "[20:22:37] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 1044 extra nodes, 0 pruned nodes, max_depth=12\n",
-      "[20:22:38] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 458 extra nodes, 0 pruned nodes, max_depth=12\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[20:22:38] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 458 extra nodes, 0 pruned nodes, max_depth=12\n",
       "[20:22:40] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 1054 extra nodes, 0 pruned nodes, max_depth=12\n",
       "[20:22:42] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 478 extra nodes, 0 pruned nodes, max_depth=12\n",
       "[20:22:43] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 828 extra nodes, 0 pruned nodes, max_depth=12\n",
@@ -1930,9 +1949,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2341,13 +2358,7 @@
       "[309]\tvalid_0's l1: 513183\n",
       "[310]\tvalid_0's l1: 513183\n",
       "[311]\tvalid_0's l1: 513213\n",
-      "[312]\tvalid_0's l1: 513236\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[312]\tvalid_0's l1: 513236\n",
       "[313]\tvalid_0's l1: 513172\n",
       "[314]\tvalid_0's l1: 513125\n",
       "[315]\tvalid_0's l1: 513092\n",
@@ -2657,13 +2668,7 @@
       "[619]\tvalid_0's l1: 502081\n",
       "[620]\tvalid_0's l1: 502055\n",
       "[621]\tvalid_0's l1: 502070\n",
-      "[622]\tvalid_0's l1: 502047\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[622]\tvalid_0's l1: 502047\n",
       "[623]\tvalid_0's l1: 502016\n",
       "[624]\tvalid_0's l1: 501982\n",
       "[625]\tvalid_0's l1: 501985\n",
@@ -2973,13 +2978,7 @@
       "[929]\tvalid_0's l1: 497649\n",
       "[930]\tvalid_0's l1: 497597\n",
       "[931]\tvalid_0's l1: 497591\n",
-      "[932]\tvalid_0's l1: 497542\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[932]\tvalid_0's l1: 497542\n",
       "[933]\tvalid_0's l1: 497524\n",
       "[934]\tvalid_0's l1: 497537\n",
       "[935]\tvalid_0's l1: 497519\n",
@@ -3276,13 +3275,7 @@
       "[1226]\tvalid_0's l1: 495075\n",
       "[1227]\tvalid_0's l1: 495042\n",
       "[1228]\tvalid_0's l1: 495035\n",
-      "[1229]\tvalid_0's l1: 495023\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[1229]\tvalid_0's l1: 495023\n",
       "[1230]\tvalid_0's l1: 494993\n",
       "[1231]\tvalid_0's l1: 494972\n",
       "[1232]\tvalid_0's l1: 494965\n",
@@ -3589,13 +3582,7 @@
       "[1533]\tvalid_0's l1: 493325\n",
       "[1534]\tvalid_0's l1: 493345\n",
       "[1535]\tvalid_0's l1: 493343\n",
-      "[1536]\tvalid_0's l1: 493335\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[1536]\tvalid_0's l1: 493335\n",
       "[1537]\tvalid_0's l1: 493350\n",
       "[1538]\tvalid_0's l1: 493348\n",
       "[1539]\tvalid_0's l1: 493358\n",
@@ -3890,13 +3877,7 @@
       "[1828]\tvalid_0's l1: 491740\n",
       "[1829]\tvalid_0's l1: 491720\n",
       "[1830]\tvalid_0's l1: 491685\n",
-      "[1831]\tvalid_0's l1: 491681\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[1831]\tvalid_0's l1: 491681\n",
       "[1832]\tvalid_0's l1: 491687\n",
       "[1833]\tvalid_0's l1: 491692\n",
       "[1834]\tvalid_0's l1: 491694\n",
@@ -4136,7 +4117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
