--- a/parameter_tuning.ipynb
+++ b/parameter_tuning.ipynb
@@ -2,10 +2,142 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import math\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "seed = 42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Importing Jupyter notebook from pre_processing.ipynb\n",
+      "Importing Jupyter notebook from feature_generation.ipynb\n",
+      "Importing Jupyter notebook from feature_selection.ipynb\n",
+      "Importing Jupyter notebook from parameter_tuning.ipynb\n",
+      "Importing Jupyter notebook from predict.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nbimporter\n",
+    "\n",
+    "import pre_processing\n",
+    "import feature_generation\n",
+    "import feature_selection\n",
+    "import parameter_tuning\n",
+    "import predict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Parameter Tuning para XGBoost\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xgboost\n",
+    "from sklearn.model_selection import GridSearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train,test = pre_processing.load_featured_datasets()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train['precio'] = train['precio'].map(lambda x: math.log(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_selected = feature_selection.get_selected_dataframe(train)\n",
+    "test_selected = feature_selection.get_selected_dataframe(test, precio=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = train_selected.drop('precio', axis=1).values\n",
+    "Y = train_selected['precio'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg = xgboost.XGBRegressor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = {\n",
+    "    'max_depth':[13,14,15],\n",
+    "    'n_estimators':[120,130,140],\n",
+    "    'learning_rate': [0.05,0.1,0.3],\n",
+    "    'subsample':[0.5,0.8,0.9],\n",
+    "    'min_child_weight':[15,20]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gridsearch = GridSearchCV(reg, param_grid, cv=4, scoring = 'neg_mean_absolute_error')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gridsearch.fit(X,Y)"
+   ]
   }
  ],
  "metadata": {
@@ -28,5 +160,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
