--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -27,7 +27,8 @@
      "output_type": "stream",
      "text": [
       "Importing Jupyter notebook from feature_generation.ipynb\n",
-      "Importing Jupyter notebook from pre_processing.ipynb\n"
+      "Importing Jupyter notebook from pre_processing.ipynb\n",
+      "Importing Jupyter notebook from feature_selection.ipynb\n"
      ]
     }
    ],
@@ -94,11 +95,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_featured_appended_dataset():\n",
+    "def load_featured_appended_dataset(class_feature):\n",
     "    \"\"\"Carga el .csv con los features generados, y lo formatea para ahorrar memoria. Devuelve un unico\n",
     "    dataframe cuyas primeras 240.000 filas son de train.csv y sus ultimas 60.000 de test.\"\"\"\n",
     "      \n",
@@ -108,11 +109,15 @@
     "    features_types = feature_generation.get_features_types()\n",
     "    \n",
     "    for file in csv_names:\n",
+    "        if file=='class' and not class_feature:\n",
+    "            continue\n",
     "        ruta = 'features/'+file+'.csv'\n",
     "        add = pd.read_csv(ruta, index_col='id')\n",
     "        df = pd.merge(df, add, how='left', on='id')\n",
     "           \n",
     "    for categoria in features_types.keys():\n",
+    "        if categoria=='class' and not class_feature:\n",
+    "            continue\n",
     "        for tipo in features_types[categoria]:\n",
     "            castear = features_types[categoria][tipo]\n",
     "            if (tipo == 'bernoulli'):\n",
@@ -131,16 +136,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_featured_datasets():\n",
+    "def load_featured_datasets(class_feature=True):\n",
     "    \"\"\"Devuelve dos datasets en el formato:\n",
     "    train_df, test_df\n",
     "    Para los datasets con las features generadas.\"\"\"\n",
     "    \n",
-    "    df = load_featured_appended_dataset()\n",
+    "    df = load_featured_appended_dataset(class_feature)\n",
     "    return separate_train_test(df)"
    ]
   },
